--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "megurid---concrete-&-ai",
+  "name": "megurid---stone-&-code",
   "private": true,
   "version": "0.0.0",
   "type": "module",
